@@ -64,7 +64,7 @@ function scimat2 = scimat_blockproc3(scimat, blksz, fun, border, useparallel)
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2011 University of Oxford
-% Version: 0.1.0
+% Version: 0.1.1
 % $Rev$
 % $Date$
 % 
@@ -92,8 +92,8 @@ function scimat2 = scimat_blockproc3(scimat, blksz, fun, border, useparallel)
 % along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 % check arguments
-error(nargchk(3, 5, nargin, 'struct'));
-error(nargoutchk(0, 1, nargout, 'struct'));
+narginchk(3, 5);
+nargoutchk(0, 1);
 
 % defaults
 if isempty(blksz)
